# zoomcamp_projects

./: README.md  dockerfile  main.py  notebook.ipynb  predict.py  preprocessing_EDA.ipynb  pyproject.toml  sales.py  train.py
.ipynb_checkpoints/: notebook-checkpoint.ipynb
