[project]
name = "zoomcamp-projects"
version = "0.1.0"
description = "Profit Prediction for Loyal Customers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
